Revert "fix: prevent service scope wrapping on mobile"
This reverts commit f8998f431e7462c7936a9aaacecc2a1bfc1a8146.

--- a/frontend/intent-routing-console/src/global.less
+++ b/frontend/intent-routing-console/src/global.less
@@ -517,25 +517,6 @@ body {
     align-items: stretch;
     flex-direction: column;
   }
-
-  .service-scope-bar > .ant-space {
-    align-items: flex-start;
-    width: 100%;
-  }
-
-  .service-scope-bar > .ant-space:first-child {
-    flex-direction: column;
-  }
-
-  .service-scope-bar .ant-select {
-    min-width: 0 !important;
-    width: 100%;
-  }
-
-  .service-scope-bar .ant-typography,
-  .service-scope-bar .ant-typography code {
-    white-space: nowrap;
-  }
 }
 
 @media (max-width: 900px) {
